dev/test_programs/INVALID/group5/scanner_literal_interpreted_unescaped.go
package scanner_literal_interpreted_unescaped

var r string = "A double quote looks like this: " ok?";
